--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -15,22 +15,15 @@ spec:
     spec:
       containers:
       - name: wordpress
-        image: wordpress:6.7.2-apache 
+        image: wordpress:latest
         ports:
         - containerPort: 80
         env:
         - name: WORDPRESS_DB_HOST
-          value: "mysql-service"  
+          value: "localhost"
         - name: WORDPRESS_DB_USER
-          value: "wordpress"
+          value: "exampleuser"
         - name: WORDPRESS_DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-secret
-              key: password
+          value: "examplepass"
         - name: WORDPRESS_DB_NAME
-          value: "wordpress"
-        - name: WORDPRESS_CONFIG_EXTRA
-          value: |
-            define('WP_HOME', 'https://your-domain.com');
-            define('WP_SITEURL', 'https://your-domain.com');
+          value: "exampledb"
