--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -1,16 +1,29 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: wordpress-ingress
-  namespace: wordpress
+  name: project-ingress
+  namespace: routefinale
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - http:
+  - host: wordpress.local
+    http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: wordpress-service
+            name: wordpress
+            port:
+              number: 80
+  - host: pma.local
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: phpmyadmin
             port:
               number: 80
