--- a/kubernetes/wordpress-service.yaml
+++ b/kubernetes/wordpress-service.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress-service
-  namespace: wordpress
+  name: wordpress
+  namespace: routefinale
 spec:
   selector:
     app: wordpress
   ports:
-    - protocol: TCP
-      port: 80
+    - port: 80
       targetPort: 80
   type: ClusterIP
