--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,6 +1,5 @@
-[build_servers]
-localhost ansible_connection=local
+[local]
+127.0.0.1 ansible_connection=local
 
-[all:vars]
-ansible_python_interpreter=/usr/bin/python3
-build_server_user=gitlab-runner
+[buildservers]
+127.0.0.1 ansible_connection=local
