--- a/kubernetes/wordpress/service.yaml
+++ b/kubernetes/wordpress/service.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: wordpress
-  namespace: routefinale
+  namespace: route-finale
 spec:
+  type: ClusterIP
+  ports:
+  - port: 80
+    targetPort: 80
   selector:
     app: wordpress
-  ports:
-    - port: 80
-      targetPort: 80
-  type: ClusterIP
